# trip_generation

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
trip_dispatch/: api.py  hooks.py  install.py  modules.txt  patches.txt  utils.py
trip_dispatch/print_format/trip_dispatch_slip/: trip_dispatch_slip.html  trip_dispatch_slip.json
trip_dispatch/public/js/: gate_entry_log.js  sales_invoice.js  sales_invoice_list.js
trip_dispatch/trip_dispatch/doctype/gate_entry_log/: gate_entry_log.json  gate_entry_log.py
trip_dispatch/trip_dispatch/doctype/gate_entry_log_invoice/: gate_entry_log_invoice.json  gate_entry_log_invoice.py
trip_dispatch/trip_dispatch/doctype/trip/: test_trip.py  trip.js  trip.json  trip.py
trip_dispatch/trip_dispatch/doctype/trip_invoice/: trip_invoice.json  trip_invoice.py
trip_dispatch/trip_dispatch/doctype/vehicle/: vehicle.json  vehicle.py
trip_dispatch/www/gate-scan/: index.html  index.py
