[project]
name = "trip_dispatch"
authors = [
    { name = "Your Company", email = "you@example.com" }
]
description = "Vehicle trip generation, QR dispatch and gate verification for ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "qrcode~=7.4",
    "pillow~=10.0"
]

[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
